# geodata_to_docx

./: LICENSE.txt  README.rst  geodata_to_docx.py  pyproject.toml
example/: blank.docx  example.ipynb
example/data/: points.gpkg
